spacing fix

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -65,7 +65,7 @@ body{
         position: relative;
     }
     p{
-        margin:0;
+        margin:10px 0;
         font-size: 0.9em !important;
         line-height: 200% !important;
     }
